working version with adding a second marker

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,4 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
-<nav class="bottom-nav">
-  <div class="nav-wrapper">
-    <a href="#" class="brand-logo center">Menu</a>
-  </div>
-</nav>
+<app-footernav></app-footernav>
