--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
+@import '../node_modules/normalize.css/normalize';
+
+
 /* You can add global styles to this file, and also import other style files */
 /* You can add global styles to this file, and also import other style files */
 @import '../node_modules/materialize-css/sass/components/_color.scss';
@@ -9,8 +12,3 @@ $roboto-font-path: "../node_modules/materialize-css/dist/fonts/roboto/";
 // $secondary-color: color("indigo", "lighten-1") !default;
 
 @import "../node_modules/materialize-css/sass/materialize.scss";
-
-.bottom-nav {
-  position: absolute;
-  bottom: 0;
-}
