--- a/src/app/components/footernav/footernav.component.html
+++ b/src/app/components/footernav/footernav.component.html
@@ -12,6 +12,7 @@
       <label for="marker">Marker Code</label>
       <button class="btn btn-large waves-dark waves-effect" (click)="addMarker()">Take me there</button>
     </div>
+    <button class="btn btn-large waves-dark waves-effect" (click)="pathService.getFountains()">Show me all fountains</button>
   </div>
   <div class="modal-footer container center">
     <button class="waves-effect waves-green btn-flat" (click)="closeModal()">Close</button>
