WIP: multiple points for routing

--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,5 +1,6 @@
 <!-- this creates a google map on the page with the given lat/lng from -->
 <!-- the component as the initial center of the map: -->
+<div class="btn btn-large" (click)="updateRoute()">UPDATE MAP</div>
 <agm-map
   [latitude]="lat"
   [longitude]="lng"
@@ -7,5 +8,5 @@
   [styles]="style"
   [mapTypeId]="'satellite'">
   <agm-marker *ngFor="let waypoint of pathService.wayPoints" [latitude]="waypoint.lat" [longitude]="waypoint.lng"></agm-marker>
-  <agm-directions [origin]="pathService.wayPoints[0]" [destination]="pathService.wayPoints[1]" [waypoints]="pathService.locationsArray()" *ngIf="pathService.locationsArray().length > 1"></agm-directions>
+  <agm-directions [origin]="pathService.wayPoints[0]" [destination]="pathService.wayPoints[pathService.wayPoints.length - 1]" [waypoints]="pathService.locationsArray()" *ngIf="pathService.locationsArray().length > 1"></agm-directions>
 </agm-map>
