--- a/src/app/components/footernav/footernav.component.html
+++ b/src/app/components/footernav/footernav.component.html
@@ -1,6 +1,6 @@
 <nav class="bottom-nav" (click)="openModal()">
   <div class="nav-wrapper">
-    <a href="#modal1" class="brand-logo center modal-trigger" >Enter new location code</a>
+    <a href="#modal1" class="brand-logo center modal-trigger" >new location code</a>
   </div>
 </nav>
 
@@ -8,13 +8,33 @@
 <div id="modal1" class="modal bottom-sheet container" materialize="modal" [materializeParams]="[{dismissible: false}]" [materializeActions]="modalActions">
   <div class="modal-content container">
     <div class="input-field s12">
-      <input type="number" id="marker">
-      <label for="marker">Marker Code</label>
-      <button class="btn btn-large waves-dark waves-effect" (click)="addMarker()">Take me there</button>
+      <form #pathForm="ngForm">
+        <input type="number"
+          id="markerId"
+          name="markerId"
+          required
+          pattern="[0-9]{5}"
+          [(ngModel)]="pathService.markerId"
+          #markerId="ngModel">
+        <label for="marker">marker code</label>
+        <button class="btn btn-large btn-wide waves-dark waves-effect" (click)="addMarker()" [ngClass]="{'disabled' : markerId.invalid }">Go to the next discovery point</button>
+      </form>
     </div>
-    <button class="btn btn-large waves-dark waves-effect" (click)="pathService.getFountains()">Show me all fountains</button>
+    <!-- <button class="btn btn-large waves-dark waves-effect" (click)="pathService.getFountains()">Show me all fountains</button> -->
   </div>
   <div class="modal-footer container center">
     <button class="waves-effect waves-green btn-flat" (click)="closeModal()">Close</button>
+  </div>
+</div>
+
+<!-- Info Modal -->
+<div id="modal" class="modal" materialize="modal" [materializeParams]="[{dismissible: false}]" [materializeActions]="modalActionsInfo"
+*ngIf="pathService.wayPoints.length >= 1">
+  <div class="modal-content container">
+    <h4>{{ pathService.wayPoints[pathService.wayPoints.length - 1].title}}</h4>
+    <p>{{ pathService.wayPoints[pathService.wayPoints.length - 1].description}}</p>
+  </div>
+  <div class="modal-footer container center">
+    <button class="waves-effect waves-green btn-flat" (click)="closeInfoModal()">Close</button>
   </div>
 </div>
