add some more datasets to display

--- a/src/app/components/footernav/footernav.component.html
+++ b/src/app/components/footernav/footernav.component.html
@@ -1,6 +1,6 @@
 <nav class="bottom-nav" (click)="openModal()">
   <div class="nav-wrapper">
-    <a href="" class="brand-logo center modal-trigger">new location code</a>
+    <a class="brand-logo center modal-trigger">new location code</a>
   </div>
 </nav>
 
