--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<app-side-nav></app-side-nav>
 <router-outlet></router-outlet>
 <app-footernav></app-footernav>
